adjust banner section and skills section. background color are to help me see elements better when making changes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link href="resources/index.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello</h1>
 
     <header>
         <nav>
-            <ul>
+            <ul class="navbar">
                 <li>Contact Info</li>
                                 <!-- Info to add to contact page: -->
                                 <!-- <p>Contact Information:</p>
@@ -20,26 +19,23 @@
                                         <li>email: ebaltazar1145@gmail.com</li>
                                         <li>phone: (323) 907-2909</li>
                                     </ul> -->
-                <li>Personal Facts</li>
                 <li>Programming Goals</li>
                 <li>People Who Inspired Me</li>
             </ul>
         </nav>
         <main>
-            <banner>
-                <!-- <img src="/Users/edgardobaltazar/Desktop/CodeCademy/DevProjects/11.Personal Website/Resources/Pictures/IMG_2348.JPG">
-                <figcaption>A picture of me and my lovely girlfriend. I couldn't have done this without her.</figcaption> -->
-            </banner>
-            <h1>Edgardo "Tiny" Baltazar</h1>
-            <p>I am self tought programmer currently learning HTML, CSS and JavaScript</p>
+            <div class="banner">
+                <h1>Edgardo Baltazar</h1>
+                <p>I am self tought programmer based in Los Angeles CA, currently learning HTML, CSS and JavaScript</p>
+            </div>
         </main>
     </header>
 
     <!-- Skills Section -->
-    <section class="skills">
-            
-        <h3>Skills</h3>
-            <ul>
+    <section class="skillscontainer">
+        <div class="skills">    
+            <h3>Skills</h3>
+            <ul class="skill">
                 <li>HTML5</li>
                 <li>CSS</li>
                 <li>Flexbox</li>
@@ -48,6 +44,7 @@
                 <li>GitHub</li>
                 <li>Command Line</li>
             </ul>
+        </div>
     </section>
     
      <section class="about-me">
