add image to about me section and set up flexbox lay out

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <li>People Who Inspired Me</li>
             </ul>
         </nav>
-        <main>
+        <main class ="container-1">
             <div class="banner">
-                <h1>Edgardo Baltazar</h1>
+                <h1 id="name">Edgardo Baltazar</h1>
                 <p>I am self tought programmer based in Los Angeles CA, currently learning HTML, CSS and JavaScript</p>
             </div>
         </main>
@@ -47,8 +47,10 @@
         </div>
     </section>
     
-     <section class="about-me">
-        <h2>About Me:</h2>
+     <section class="about-me" id="flex-1">
+        <img class="desktop" src="resources/pictures/desktop.jpg">
+        <div>
+        <h3 class="about">About Me:</h3>
             <p>Hello! My name is Edgardo and I am self taught programmer. 
                 My journey began in March of 2022 after meeting up with a good friend 
                 from college who inspired me to make a career change. 
@@ -81,6 +83,7 @@
                 <br>           
                 I hope to continue learning front-end developement skills and hope to persue an entry
                 level job in wed design within in the next 6-8 months.</p>    
+                </div>
     </section>
             
 
