--- a/index.html
+++ b/index.html
@@ -88,29 +88,30 @@
             
 
         <section class="projects">
-            <div>
-                <h3>Projects</h3>
-                <div>
+            <h3>Projects</h3>
+            <div class="container-2" id="flex-2">
+                
+                <div class="project">
                     <h4>Website Style Guide (HTML/CSS)</h4>
                     <img src="resources/pictures/Screen-Shot1.png">
                     <figcaption>This project was my first attempt at using HTML and CSS to come up with Style Guide for a future personal website</figcaption>
                 </div>
-                <div>
-\                   <h4>Tea Cozy (HTML/CSS/Flexbox)</h4>
+                <div class="project">
+                   <h4>Tea Cozy (HTML/CSS/Flexbox)</h4>
                     <img src="resources/pictures/Screen-Shot2.png">
                     <figcaption>This project was my first attempt at using HTML, CSS and Flexbox to recreate a static website based on specific specs provided by codecademy. In addition, I learned to use a proper file system in order to stay organized throughout the entire project.</figcaption>
                 </div>
-                <div>
+                <div class="project">
                     <h4>Fotomatic (CSS Grid/ Media Queries)</h4>
                     <img src="resources/pictures/Screen-Shot3.png">
                     <figcaption>This project required me to use CSS Grid and media queroes to modify an existing page to add specific specs and convert the website from statis to respnosive. It was my time implementing media queries to see how a wedsbite is affected when screen sizes change.</figcaption>
                 </div>
-                <div>
+                <div class="project">
                     <h4>Business Site (HTML/CSS/Flexbox/Media Queries)</h4>
                     <img src="resources/pictures/Screen-Shot4.png">
                     <figcaption>This project was a personal favorite because I was able to create a website for mt girlfreind's up and coming business. I got to further practice creating a website from scratch and use a combination of HTML, CSS and primarily Flexbox to organize and style my page.</figcaption>
                 </div>
-                <div>
+                <div class="project">
                     <h4>Responsive Club Site (Media Queries)</h4>
                     <img src="resources/pictures/Screen-Shot5.png">
                     <figcaption>This project was also one of my favorite becuase I was able to add a personal touch once again. This project required me to dive deeper into making a website responsive by using media queries and relative units in CSS to position and size elements.</figcaption>
