add contact page and anchor tag to be able to click on navbar option: contacts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul class="navbar">
-                <li>Contact Info</li>
+                <li><a href="/Users/edgardobaltazar/Desktop/Web-Projects/personalportfolio/contacts.html" target="_blank">Contact Info</a></li>
                                 <!-- Info to add to contact page: -->
                                 <!-- <p>Contact Information:</p>
                                     <ul>
