--- a/contacts.html
+++ b/contacts.html
@@ -10,19 +10,14 @@
 
     <h1>Contact Information</h1>
 
-    <p>Contact Information:</p>
+    <p>Reach me at any of the following:</p>
         <ul>
             <li>Email: ebaltazar1145@gmail.com</li>
             <li>Phone: (323) 907-2909</li>
-            <li>GitHub: ebaltazar04</li>
-            <li>LinkedIn: </li>
+            <li>GitHub: https://github.com/ebaltazar04</li>
+            <li>LinkedIn: https://www.linkedin.com/in/baltazar-edgardo-06a4834a/</li>
         </ul> 
 </body>
 </html>
 
-
-
-
-
-Contacts
 
