add new JavaScript code to all 5 projects

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                     <img src="resources/pictures/Screen-Shot3.png">
                     <figcaption>This project required me to use CSS Grid and media queroes to modify an existing page to add specific specs and convert the website from statis to respnosive. It was my time implementing media queries to see how a wedsbite is affected when screen sizes change.</figcaption>
                 </div>
-                <div class="project">
+                <div class="project" id="pro4">
                     <h4 class ="project-heading">Business Site (HTML/CSS/Flexbox/Media Queries)</h4>
                     <img src="resources/pictures/Screen-Shot4.png">
                     <figcaption>This project was a personal favorite because I was able to create a website for mt girlfreind's up and coming business. I got to further practice creating a website from scratch and use a combination of HTML, CSS and primarily Flexbox to organize and style my page.</figcaption>
                 </div>
-                <div class="project">
+                <div class="project" id="pro5">
                     <h4 class ="project-heading">Responsive Club Site (Media Queries)</h4>
                     <img src="resources/pictures/Screen-Shot5.png">
                     <figcaption>This project was also one of my favorite becuase I was able to add a personal touch once again. This project required me to dive deeper into making a website responsive by using media queries and relative units in CSS to position and size elements.</figcaption>
