going to add picture change on click

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
     </section>
     
      <section class="about-me" id="flex-1">
-        <img class="desktop" src="resources/pictures/desktop.jpg">
+        <div class="button">
+            <img class="desktop" src="resources/pictures/desktop.jpg">
+            <button>Click for a surprise</button>
+            <img class="petunia">
+            <!-- <figcaption>Click on image for a surprise</figcaption> -->
+        </div>
+        </div>
         <div>
             <h3 class="about">About Me:</h3>
             <p>Hello! My name is Edgardo and I am self taught programmer. 
