add event listeners to change image on 'about me' section to include best dog in the world when you click on button. Also add new banner feature

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
      <section class="about-me" id="flex-1">
         <div class="button">
             <img class="desktop" src="resources/pictures/desktop.jpg">
-            <button>Click for a surprise</button>
-            <img class="petunia">
+            <img class="hidden-image box" src="resources/pictures/IMG_8281.jpg">
+            <button class="reveal-btn box">Click for a surprise</button>
             <!-- <figcaption>Click on image for a surprise</figcaption> -->
         </div>
         </div>
